fixed description overflow

--- a/client/public/styles/css/styles.css
+++ b/client/public/styles/css/styles.css
@@ -142,13 +142,15 @@ body {
   grid-gap: 15px; }
   .organizations .organization {
     display: grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 50px calc(100% - 65px);
     grid-gap: 10px;
     position: relative;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
     background-color: white; }
+    .organizations .organization div {
+      max-width: 100%; }
     .organizations .organization-header {
       display: grid;
       grid-template-columns: 80% 1fr;
