--- a/client/public/styles/sass/imports/_Organizations.scss
+++ b/client/public/styles/sass/imports/_Organizations.scss
@@ -5,7 +5,7 @@
 
   .organization {
     display: grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 50px calc(100% - 65px); // 65PX FOR PADDING + OTHER COLUMN WIDTH
     grid-gap: 10px;
 
     position: relative;
@@ -14,6 +14,10 @@
     padding: 15px;
     box-shadow: 0 5px 30px rgba(0,0,0,.2);
     background-color: white;
+
+    div {
+      max-width: 100%;
+    }
 
     &-header {
       display: grid;
